# GenieTerm

./: .gitignore  ACKNOWLEDGEMENTS.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OPEN_SOURCE_SCOPE.md  README.md  ROADMAP.md  Taskfile.yml  build_release.sh  electron-builder.config.cjs  electron.vite.config.ts  eslint.config.js  generate_icns.sh  go.mod  go.sum  index.html  package-lock.json  package.json  run.sh  vitest.config.ts
.github/: copilot-instructions.md
assets/: AppIcon.icns
benchmarks/: README.md  aggregate_runs.py  baseline.json  check_regression.py  compare_releases_core.sh  e2e_baseline.json  e2e_thresholds.json  preflight_check.sh  run_benchmarks.sh  run_e2e_bench.sh  run_stable_suite.sh  thresholds.json  update_baseline.sh  update_e2e_baseline.sh
cmd/wsh/: main-wsh.go
docs/: GENIETERM-ROADMAP.md  installed-app-gate.md  package.json  packaging-artifact-gate.md  v1-release-gate.md
emain/: app-icon.ts  emain-builder.ts  emain-ipc.ts  emain-menu.ts  emain-platform.ts  emain-tabview.ts  emain-util.ts  emain-window.ts  emain.ts  preload.ts  safe-open-util.ts  safe-open.test.ts  safe-open.ts  update-release-notes.test.ts  update-release-notes.ts  updater.ts
frontend/: tailwindsetup.css  wave.ts
schema/: connections.json  settings.json  widgets.json
scripts/: generate-logo-assets.mjs  macos-app-verifier.mjs  normalize-update-metadata.mjs  preview-interaction-qa.mjs  preview-visual-qa.mjs  render_latex_graphics.sh  v1-gate.mjs  verify-installed-app.mjs  verify-package-artifact.mjs
src/: engine.rs  ffi.rs  lib.rs
tsunami/: go.mod
(+505 files in other folders)
