[package]
name = "genieterm"
version = "0.1.0"
edition = "2021"

[lib]
name = "genieterm_ffi"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
portable-pty = "0.8"
vte = "0.13"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.1"
